--- a/index.html
+++ b/index.html
@@ -6,5 +6,24 @@
 </head>
 <body>
 <h1>Web Development I</h1>
+<h2>02, week 25/09:</h2>
+<ul>
+<li> <a href="labo_2/opdracht2.html"> Opdracht 2 </a></li>
+<li> <a href="labo_2/opdracht3.html"> Opdracht 3 </a></li>
+<li> <a href="labo_2/opdracht4.html"> Opdracht 4 </a></li>
+<li> <a href="labo_2/opdracht5.html"> Opdracht 5 </a></li>
+<li> <a href="labo_2/opdracht6.html"> Opdracht 6 </a></li>
+<li> <a href="labo_2/opdracht7.html"> Opdracht 7 </a></li>
+<li> <a href="labo_2/opdracht8.html"> Opdracht 8 </a></li>
+<li> <a href="labo_2/opdracht9.html"> Opdracht 9 </a></li>
+<li> <a href="labo_2/opdracht10.html"> Opdracht 10 </a></li>
+</ul>
+<h2>03, week 02/10:</h2>
+<ul>
+<li> <a href="labo_3/opdrachten_1_2_3.html"> Opdracht 1,2,3 </a></li>
+<li> <a href="labo_3/personal_homepage_assignment/personal_homepage1.html"> Personal homepage assignment (en uitbreiding) </a></li>
+<li> <a href="labo_3/contact_information_assignment/contact_information.html"> Contact information assignment  </a></li>
+<li> <a href="labo_3/opleidingsaanbod_VIVES/opleidingsaanbod.html"> Opleidingsaanbod VIVES </a></li>
+</ul>
 </body>
 </html>
