--- a/index.html
+++ b/index.html
@@ -25,5 +25,11 @@
 <li> <a href="labo_3/contact_information_assignment/contact_information.html"> Contact information assignment  </a></li>
 <li> <a href="labo_3/opleidingsaanbod_VIVES/opleidingsaanbod.html"> Opleidingsaanbod VIVES </a></li>
 </ul>
+<h2>04, week 09/10:</h2>
+<ul>
+    <li> <a href="labo_4/opdracht_1.html"> Opdracht 1 </a></li>
+    <li> <a href="labo_4/opfracht_2.html"> Opdracht 2 </a></li>
+    <li> <a href="labo_4/Opdracht 5/index.html"> Opdracht 5 </a></li>
+</ul>
 </body>
 </html>
