--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nl">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
@@ -25,11 +25,19 @@
 <li> <a href="labo_3/contact_information_assignment/contact_information.html"> Contact information assignment  </a></li>
 <li> <a href="labo_3/opleidingsaanbod_VIVES/opleidingsaanbod.html"> Opleidingsaanbod VIVES </a></li>
 </ul>
-    <h2>04, week 09/10:</h2>
+<h2>04, week 09/10:</h2>
 <ul>
     <li> <a href="labo_4/opdracht_1.html"> Opdracht 1 </a></li>
     <li> <a href="labo_4/opfracht_2.html"> Opdracht 2 </a></li>
     <li> <a href="labo_4/Opdracht 5/index.html"> Opdracht 5 </a></li>
+</ul>
+<h2>05, week 16/10:</h2>
+<ul>
+    <li> <a href="labo_5/opdracht_1.html"> Opdracht 1 </a></li>
+    <li> <a href="labo_5/opdracht_3.html"> Opdracht 3 </a></li>
+    <li> <a href="labo_5/opdracht_4.html"> Opdracht 4 </a></li>
+    <li> <a href="labo_5/Opdracht_6/index.html"> Opdracht 6 </a></li>
+    <li> <a href="labo_5/opdracht_7.html"> Opdracht 7 </a></li>
 </ul>
 </body>
 </html>
