--- a/index.html
+++ b/index.html
@@ -39,5 +39,13 @@
     <li> <a href="labo_5/Opdracht_6/index.html"> Opdracht 6 </a></li>
     <li> <a href="labo_5/opdracht_7.html"> Opdracht 7 </a></li>
 </ul>
+<h2>06, week 23/10:</h2>
+<ul>
+    <li> <a href="labo_6/opdracht_1/index.html"> Opdracht 1 </a></li>
+    <li> <a href="labo_6/opdracht_3/resume.html"> Opdracht 3 </a></li>
+    <li> <a href="labo_6/opdracht_4/index.html"> Opdracht 4 </a></li>
+    <li> <a href="labo_6/opdracht_5/index.html"> Opdracht 5 </a></li>
+    <li> <a href="labo_6/opdracht_6/index.html"> Opdracht 6 </a></li>
+</ul>
 </body>
 </html>
