--- a/index.html
+++ b/index.html
@@ -47,5 +47,11 @@
     <li> <a href="labo_6/opdracht_5/index.html"> Opdracht 5 </a></li>
     <li> <a href="labo_6/opdracht_6/index.html"> Opdracht 6 </a></li>
 </ul>
+<h2>07, week 06/11:</h2>
+<ul>
+    <li> <a href="labo_7/opgave nature blog/index.html"> Nature Blog </a></li>
+    <li> <a href="labo_7/persoonlijke_homepage/index.html"> Personal Homepage + Friends tabel </a></li>
+    <li> <a href="labo_7/Kalender/index.html"> Kalender </a></li>
+</ul>
 </body>
 </html>
