--- a/index.html
+++ b/index.html
@@ -53,12 +53,17 @@
     <li> <a href="labo_7/persoonlijke_homepage/index.html"> Personal Homepage + Friends tabel </a></li>
     <li> <a href="labo_7/Kalender/index.html"> Kalender </a></li>
 </ul>
-    <h2>08, week 13/11:</h2>
+<h2>08, week 13/11:</h2>
 <ul>
     <li> <a href="labo_8/opdrachten_1_2_3_4_5.html"> Opdrachten 1, 2, 3, 4, 5 </a></li>
     <li> <a href="labo_8/lorem_ipsum/index.html"> Lorem ipsum </a></li>
     <li> <a href="labo_8/lorem_ipsum_extra_space/index.html"> Lorem ipsum extra space </a></li>
     <li> <a href="labo_8/cocktail_bar/loungestart.html"> Cocktail bar</a></li>
+</ul>
+<h2>09, week 20/11:</h2>
+<ul>
+    <li> <a href="labo_9/positioneren_image_begin/index.html"> Positioneren </a></li>
+    <li> <a href="labo_9/opdracht_airbus/airbus.html"> Airbus </a></li>
 </ul>
 </body>
 </html>
