--- a/index.html
+++ b/index.html
@@ -65,5 +65,13 @@
     <li> <a href="labo_9/positioneren_image_begin/index.html"> Positioneren </a></li>
     <li> <a href="labo_9/opdracht_airbus/airbus.html"> Airbus </a></li>
 </ul>
+<h2>10, week 27/11:</h2>
+<ul>
+    <li> <a href="labo_10/Media_queries_katten/oef1.html"> Oefening media queries </a></li>
+    <li> <a href="labo_10/Oefening_1_bootstrap/index.html"> Oefening 1 bootstrap </a></li>
+    <li> <a href="labo_10/Oefening_2_bootstrap/index.html"> Oefening 2 bootstrap </a></li>
+    <li> <a href="labo_10/Mondriaan/index.html"> Mondriaan </a></li>
+    <li> <a href="labo_10/persoonlijke_homepage/index.html"> Personal homepage </a></li>
+</ul>
 </body>
 </html>
