--- a/index.html
+++ b/index.html
@@ -73,5 +73,15 @@
     <li> <a href="labo_10/Mondriaan/index.html"> Mondriaan </a></li>
     <li> <a href="labo_10/persoonlijke_homepage/index.html"> Personal homepage </a></li>
 </ul>
+<h2>11, week 04/12:</h2>
+<ul>
+    <li> <a href="labo_11/Grid%20Exercises/exercise1.html"> Oefening 1 </a></li>
+    <li> <a href="labo_11/Grid%20Exercises/exercise2.html"> Oefening 2 </a></li>
+    <li> <a href="labo_11/Grid%20Exercises/exercise3.html"> Oefening 3 </a></li>
+    <li> <a href="labo_11/Grid%20Exercises/exercise4.html"> Oefening 4 </a></li>
+    <li> <a href="labo_11/Grid%20Exercises/exercise5.html"> Oefening 5 </a></li>
+    <li> <a href="labo_11/Grid%20Exercises/exercise6.html"> Oefening 6 </a></li>
+    <li> <a href="labo_11/Beginsituatie/index.html"> Extra oefening </a></li>
+</ul>
 </body>
 </html>
