--- a/index.html
+++ b/index.html
@@ -83,5 +83,11 @@
     <li> <a href="labo_11/Grid%20Exercises/exercise6.html"> Oefening 6 </a></li>
     <li> <a href="labo_11/Beginsituatie/index.html"> Extra oefening </a></li>
 </ul>
+    <h2>12, week 11/12:</h2>
+<ul>
+    <li> <a href="labo_12/BeginSituatieOef1/index.html"> Oefening 1 </a></li>
+    <li> <a href="labo_12/BeginSituatieOef2/index.html"> Oefening 2 </a></li>
+    <li> <a href="labo_12/frontendmentorprofilecardBeginSituatie/index.html"> Oefening 3 </a></li>
+</ul>
 </body>
 </html>
