--- a/index.html
+++ b/index.html
@@ -2,92 +2,18 @@
 <html lang="nl">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Yuliia's labo's</title>
 </head>
 <body>
-<h1>Web Development I</h1>
-<h2>02, week 25/09:</h2>
-<ul>
-<li> <a href="labo_2/opdracht2.html"> Opdracht 2 </a></li>
-<li> <a href="labo_2/opdracht3.html"> Opdracht 3 </a></li>
-<li> <a href="labo_2/opdracht4.html"> Opdracht 4 </a></li>
-<li> <a href="labo_2/opdracht5.html"> Opdracht 5 </a></li>
-<li> <a href="labo_2/opdracht6.html"> Opdracht 6 </a></li>
-<li> <a href="labo_2/opdracht7.html"> Opdracht 7 </a></li>
-<li> <a href="labo_2/opdracht8.html"> Opdracht 8 </a></li>
-<li> <a href="labo_2/opdracht9.html"> Opdracht 9 </a></li>
-<li> <a href="labo_2/opdracht10.html"> Opdracht 10 </a></li>
-</ul>
-<h2>03, week 02/10:</h2>
-<ul>
-<li> <a href="labo_3/opdrachten_1_2_3.html"> Opdracht 1,2,3 </a></li>
-<li> <a href="labo_3/personal_homepage_assignment/personal_homepage1.html"> Personal homepage assignment (en uitbreiding) </a></li>
-<li> <a href="labo_3/contact_information_assignment/contact_information.html"> Contact information assignment  </a></li>
-<li> <a href="labo_3/opleidingsaanbod_VIVES/opleidingsaanbod.html"> Opleidingsaanbod VIVES </a></li>
-</ul>
-<h2>04, week 09/10:</h2>
-<ul>
-    <li> <a href="labo_4/opdracht_1.html"> Opdracht 1 </a></li>
-    <li> <a href="labo_4/opfracht_2.html"> Opdracht 2 </a></li>
-    <li> <a href="labo_4/Opdracht 5/index.html"> Opdracht 5 </a></li>
-</ul>
-<h2>05, week 16/10:</h2>
-<ul>
-    <li> <a href="labo_5/opdracht_1.html"> Opdracht 1 </a></li>
-    <li> <a href="labo_5/opdracht_3.html"> Opdracht 3 </a></li>
-    <li> <a href="labo_5/opdracht_4.html"> Opdracht 4 </a></li>
-    <li> <a href="labo_5/Opdracht_6/index.html"> Opdracht 6 </a></li>
-    <li> <a href="labo_5/opdracht_7.html"> Opdracht 7 </a></li>
-</ul>
-<h2>06, week 23/10:</h2>
-<ul>
-    <li> <a href="labo_6/opdracht_1/index.html"> Opdracht 1 </a></li>
-    <li> <a href="labo_6/opdracht_3/resume.html"> Opdracht 3 </a></li>
-    <li> <a href="labo_6/opdracht_4/index.html"> Opdracht 4 </a></li>
-    <li> <a href="labo_6/opdracht_5/index.html"> Opdracht 5 </a></li>
-    <li> <a href="labo_6/opdracht_6/index.html"> Opdracht 6 </a></li>
-</ul>
-<h2>07, week 06/11:</h2>
-<ul>
-    <li> <a href="labo_7/opgave nature blog/index.html"> Nature Blog </a></li>
-    <li> <a href="labo_7/persoonlijke_homepage/index.html"> Personal Homepage + Friends tabel </a></li>
-    <li> <a href="labo_7/Kalender/index.html"> Kalender </a></li>
-</ul>
-<h2>08, week 13/11:</h2>
-<ul>
-    <li> <a href="labo_8/opdrachten_1_2_3_4_5.html"> Opdrachten 1, 2, 3, 4, 5 </a></li>
-    <li> <a href="labo_8/lorem_ipsum/index.html"> Lorem ipsum </a></li>
-    <li> <a href="labo_8/lorem_ipsum_extra_space/index.html"> Lorem ipsum extra space </a></li>
-    <li> <a href="labo_8/cocktail_bar/loungestart.html"> Cocktail bar</a></li>
-</ul>
-<h2>09, week 20/11:</h2>
-<ul>
-    <li> <a href="labo_9/positioneren_image_begin/index.html"> Positioneren </a></li>
-    <li> <a href="labo_9/opdracht_airbus/airbus.html"> Airbus </a></li>
-</ul>
-<h2>10, week 27/11:</h2>
-<ul>
-    <li> <a href="labo_10/Media_queries_katten/oef1.html"> Oefening media queries </a></li>
-    <li> <a href="labo_10/Oefening_1_bootstrap/index.html"> Oefening 1 bootstrap </a></li>
-    <li> <a href="labo_10/Oefening_2_bootstrap/index.html"> Oefening 2 bootstrap </a></li>
-    <li> <a href="labo_10/Mondriaan/index.html"> Mondriaan </a></li>
-    <li> <a href="labo_10/persoonlijke_homepage/index.html"> Personal homepage </a></li>
-</ul>
-<h2>11, week 04/12:</h2>
-<ul>
-    <li> <a href="labo_11/Grid%20Exercises/exercise1.html"> Oefening 1 </a></li>
-    <li> <a href="labo_11/Grid%20Exercises/exercise2.html"> Oefening 2 </a></li>
-    <li> <a href="labo_11/Grid%20Exercises/exercise3.html"> Oefening 3 </a></li>
-    <li> <a href="labo_11/Grid%20Exercises/exercise4.html"> Oefening 4 </a></li>
-    <li> <a href="labo_11/Grid%20Exercises/exercise5.html"> Oefening 5 </a></li>
-    <li> <a href="labo_11/Grid%20Exercises/exercise6.html"> Oefening 6 </a></li>
-    <li> <a href="labo_11/Beginsituatie/index.html"> Extra oefening </a></li>
-</ul>
-    <h2>12, week 11/12:</h2>
-<ul>
-    <li> <a href="labo_12/BeginSituatieOef1/index.html"> Oefening 1 </a></li>
-    <li> <a href="labo_12/BeginSituatieOef2/index.html"> Oefening 2 </a></li>
-    <li> <a href="labo_12/frontendmentorprofilecardBeginSituatie/index.html"> Oefening 3 </a></li>
-</ul>
+<h1>Web Development I semester 2</h1>
+    <h2>Labo 2</h2>
+        <ul>
+            <li> <a href="semester_2/labo_2/opdracht_arrays"> Opdracht Arrays </a></li>
+            <li> <a href="semester_2/labo_2/opdracht_01"> Opdracht 01 </a></li>
+            <li> <a href="semester_2/labo_2/opdracht_03"> Opdracht 03 </a></li>
+            <li> <a href="semester_2/labo_2/opdracht_05"> Opdracht 05 </a></li>
+            <li> <a href="semester_2/labo_2/opdracht_06_en_opdracht_kopieer"> Opdracht 06 en Kopieer </a></li>
+            <li> <a href="semester_2/labo_2/opdracht_substring"> Opdracht 'substring' </a></li>
+        </ul>
 </body>
 </html>
