--- a/index.html
+++ b/index.html
@@ -21,5 +21,12 @@
         <li> <a href="semester_2/labo_3/colorpicker"> Opdracht colorpicker </a></li>
         <li> <a href="semester_2/labo_3/producten"> Opdracht producten </a></li>
     </ul>
+    <h2>Labo 4</h2>
+    <ul>
+        <li> <a href="semester_2/labo_4/formulier_elementen/formulierElementen.html"> Formulier </a></li>
+        <li> <a href="semester_2/labo_4/strings"> String </a></li>
+        <li> <a href="semester_2/labo_4/spaties_op_console_met_functie"> Spaties </a></li>
+        <li> <a href="semester_2/labo_4/man_van_an"> Man van An </a></li>
+    </ul>
 </body>
 </html>
