--- a/index.html
+++ b/index.html
@@ -28,5 +28,14 @@
         <li> <a href="semester_2/labo_4/spaties_op_console_met_functie"> Spaties </a></li>
         <li> <a href="semester_2/labo_4/man_van_an"> Man van An </a></li>
     </ul>
+
+<h2>Labo 5</h2>
+<ul>
+    <li> <a href="semester_2/labo_5/triagrams/index.html"> Triagrams </a></li>
+    <li> <a href="semester_2/labo_5/de_en_het/index.html"> De en Het </a></li>
+    <li> <a href="semester_2/labo_5/gemeenten/index.html"> Gemeenten </a></li>
+    <li> <a href="semester_2/labo_5/formwaarden/index.html"> Formwaarden </a></li>
+    <li> <a href="semester_2/labo_5/formvalidatie/oplossing%20formvalidatie%20eerste%20aanzet/index.html"> Formvalidatie </a></li>
+</ul>
 </body>
 </html>
