--- a/index.html
+++ b/index.html
@@ -37,5 +37,13 @@
     <li> <a href="semester_2/labo_5/formwaarden/index.html"> Formwaarden </a></li>
     <li> <a href="semester_2/labo_5/formvalidatie/oplossing%20formvalidatie%20eerste%20aanzet/index.html"> Formvalidatie </a></li>
 </ul>
+
+<h2>Labo 6</h2>
+<ul>
+    <li> <a href="semester_2/labo_6/extra_oefeningen_nodes_opdracht1/index.html"> Extra oefening nodes 1 </a></li>
+    <li> <a href="semester_2/labo_6/extra_oefeningen_nodes_opdracht2/index.html"> Extra oefening nodes 2 </a></li>
+    <li> <a href="semester_2/labo_6/extra_oefeningen_nodes_opdracht3/index.html"> Extra oefening nodes 3 </a></li>
+    <li> <a href="semester_2/labo_6/colorpicker_uitbreiding/index.html"> Colorpicker (uitbreiding) </a></li>
+</ul>
 </body>
 </html>
