--- a/semester_2/labo_7/matching_game/index.html
+++ b/semester_2/labo_7/matching_game/index.html
@@ -3,10 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="styles/style.css">
-    <title>Title</title>
+    <title>Matching game</title>
 </head>
 <body>
-
+<div id="game">
+<h1>Play the memory card game!</h1>
+<div id="playField">
+</div>
+</div>
 <script src="scripts/code.js"></script>
 </body>
 </html>
