--- a/index.html
+++ b/index.html
@@ -29,21 +29,27 @@
         <li> <a href="semester_2/labo_4/man_van_an"> Man van An </a></li>
     </ul>
 
-<h2>Labo 5</h2>
-<ul>
-    <li> <a href="semester_2/labo_5/triagrams/index.html"> Triagrams </a></li>
-    <li> <a href="semester_2/labo_5/de_en_het/index.html"> De en Het </a></li>
-    <li> <a href="semester_2/labo_5/gemeenten/index.html"> Gemeenten </a></li>
-    <li> <a href="semester_2/labo_5/formwaarden/index.html"> Formwaarden </a></li>
-    <li> <a href="semester_2/labo_5/formvalidatie/oplossing%20formvalidatie%20eerste%20aanzet/index.html"> Formvalidatie </a></li>
-</ul>
+    <h2>Labo 5</h2>
+    <ul>
+        <li> <a href="semester_2/labo_5/triagrams/index.html"> Triagrams </a></li>
+        <li> <a href="semester_2/labo_5/de_en_het/index.html"> De en Het </a></li>
+        <li> <a href="semester_2/labo_5/gemeenten/index.html"> Gemeenten </a></li>
+        <li> <a href="semester_2/labo_5/formwaarden/index.html"> Formwaarden </a></li>
+        <li> <a href="semester_2/labo_5/formvalidatie/oplossing%20formvalidatie%20eerste%20aanzet/index.html"> Formvalidatie </a></li>
+    </ul>
 
-<h2>Labo 6</h2>
-<ul>
-    <li> <a href="semester_2/labo_6/extra_oefeningen_nodes_opdracht1/index.html"> Extra oefening nodes 1 </a></li>
-    <li> <a href="semester_2/labo_6/extra_oefeningen_nodes_opdracht2/index.html"> Extra oefening nodes 2 </a></li>
-    <li> <a href="semester_2/labo_6/extra_oefeningen_nodes_opdracht3/index.html"> Extra oefening nodes 3 </a></li>
-    <li> <a href="semester_2/labo_6/colorpicker_uitbreiding/index.html"> Colorpicker (uitbreiding) </a></li>
-</ul>
+    <h2>Labo 6</h2>
+    <ul>
+        <li> <a href="semester_2/labo_6/extra_oefeningen_nodes_opdracht1/index.html"> Extra oefening nodes 1 </a></li>
+        <li> <a href="semester_2/labo_6/extra_oefeningen_nodes_opdracht2/index.html"> Extra oefening nodes 2 </a></li>
+        <li> <a href="semester_2/labo_6/extra_oefeningen_nodes_opdracht3/index.html"> Extra oefening nodes 3 </a></li>
+        <li> <a href="semester_2/labo_6/colorpicker_uitbreiding/index.html"> Colorpicker (uitbreiding) </a></li>
+    </ul>
+
+    <h2>Labo 7</h2>
+    <ul>
+        <li> <a href="semester_2/labo_7/BeginSituatie_HitAnObject/index.html"> Hit an Object </a></li>
+        <li> <a href="semester_2/labo_7/matching_game/index.html"> Matching game </a></li>
+    </ul>
 </body>
 </html>
