--- a/index.html
+++ b/index.html
@@ -51,5 +51,12 @@
         <li> <a href="semester_2/labo_7/BeginSituatie_HitAnObject/index.html"> Hit an Object </a></li>
         <li> <a href="semester_2/labo_7/matching_game/index.html"> Matching game </a></li>
     </ul>
+
+    <h2>Labo 8</h2>
+    <ul>
+        <li> <a href="semester_2/labo_8/verjaardag/index.html"> Verjaardag opdracht </a></li>
+        <li> <a href="semester_2/labo_8/JSON/index.html"> JSON opdracht </a></li>
+        <li> <a href="semester_2/labo_8/start%20contact%20manager%20opdracht/index.html"> Contact Manager </a></li>
+    </ul>
 </body>
 </html>
