--- a/index.html
+++ b/index.html
@@ -58,5 +58,10 @@
         <li> <a href="semester_2/labo_8/JSON/index.html"> JSON opdracht </a></li>
         <li> <a href="semester_2/labo_8/start%20contact%20manager%20opdracht/index.html"> Contact Manager </a></li>
     </ul>
+
+    <h2>Labo 9</h2>
+    <ul>
+        <li> <a href="semester_2/labo_9/colorpicker_pro/index.html"> Colorpicker Pro </a></li>
+    </ul>
 </body>
 </html>
