--- a/index.html
+++ b/index.html
@@ -63,5 +63,10 @@
     <ul>
         <li> <a href="semester_2/labo_9/colorpicker_pro/index.html"> Colorpicker Pro </a></li>
     </ul>
+
+    <h2>Labo 10</h2>
+    <ul>
+        <li> <a href="semester_2/labo_10/my_internet_start_page/index.html"> My internet start page </a></li>
+    </ul>
 </body>
 </html>
